fix: restore text layout and refine clipping fix

--- a/src/index.css
+++ b/src/index.css
@@ -93,8 +93,8 @@ html {
   display: inline-block;
   overflow: hidden;
   vertical-align: bottom;
-  padding: 0.8em 0.4em;
-  margin: -0.8em -0.4em;
+  padding-bottom: 0.3em;
+  margin-bottom: -0.3em;
 }
 
 .y {
