--- a/src/sections/About.css
+++ b/src/sections/About.css
@@ -23,7 +23,7 @@
     font-family: 'Lora', serif;
     font-size: 80px;
     font-weight: 500;
-    line-height: 1.8;
+    line-height: 1.2;
     letter-spacing: -1.6px;
     margin-bottom: 356px;
 }
@@ -33,7 +33,7 @@
     font-style: italic;
     font-size: 70px;
     font-weight: 300;
-    line-height: 1.8;
+    line-height: 1.2;
     letter-spacing: 1px;
 }
 
